--- a/index.html
+++ b/index.html
@@ -5,6 +5,25 @@
 		<link rel="icon" type="image/svg+xml" href="/berlin_de.svg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Fairgnügen</title>
+		<!-- Matomo -->
+		<script>
+			var _paq = (window._paq = window._paq || []);
+			/* tracker methods like "setCustomDimension" should be called before "trackPageView" */
+			_paq.push(["trackPageView"]);
+			_paq.push(["enableLinkTracking"]);
+			(function () {
+				var u = "%VITE_MATOMO_URL%";
+				_paq.push(["setTrackerUrl", u + "matomo.php"]);
+				_paq.push(["setSiteId", "%VITE_MATOMO_SITE_ID%"]);
+				var d = document,
+						g = d.createElement("script"),
+						s = d.getElementsByTagName("script")[0];
+				g.async = true;
+				g.src = u + "matomo.js";
+				s.parentNode.insertBefore(g, s);
+			})();
+		</script>
+		<!-- End Matomo Code -->
 	</head>
 	<body>
 		<div id="root"><!--app-html--></div>
